
- #9925: Correct passing -fdebug-prefix-map to flexlink on Cygwin by prefixing
  it with -link.
  (David Allsopp, review by Xavier Leroy)

- #9927: Restore Cygwin64 support.
  (David Allsopp, review by Xavier Leroy)

- #9940: Fix unboxing of allocated constants from other compilation units
  (Vincent Laviron, report by Stephen Dolan, review by Xavier Leroy and
  Stephen Dolan)

- #9998: Use Sys.opaque_identity in CamlinternalLazy.force
  This removes extra warning 59 messages when compiling afl-instrumented
  code with flambda -O3.
  (Vincent Laviron, report by Louis Gesbert, review by Gabriel Scherer and
   Pierre Chambart)

- #9999: fix -dsource printing of the pattern (`A as x | (`B as x)).
  (Gabriel Scherer, report by Anton Bachin, review by Florian Angeletti)

- #9970, #10010: fix the declaration scope of extensible-datatype constructors.
  A regression that dates back to 4.08 makes extensible-datatype constructors
  with inline records very fragile, for example:
    type 'a t += X of {x : 'a}
  (Gabriel Scherer, review by Thomas Refis and Leo White,
   report by Nicolás Ojeda Bär)

OCaml 4.11.1
------------

### Bug fixes:

- #9856, #9857: Prevent polymorphic type annotations from generalizing
  weak polymorphic variables.
  (Leo White, review by Jacques Garrigue)

- #9859, #9862: Remove an erroneous assertion when inferred function types
  appear in the right hand side of an explicit :> coercion
  (Florian Angeletti, review by Thomas Refis)

OCaml 4.11.0 (19 August 2020)
---------------------------

(Changes that can break existing programs are marked with a "*")

### Runtime system:

- #9096: Print function names in backtraces.
  Old output:
  > Called from file "foo.ml", line 16, characters 42-53
  New output:
  > Called from Foo.bar in file "foo.ml", line 16, characters 42-53
  (Stephen Dolan, review by Leo White and Mark Shinwell)

- #9082: The instrumented runtime now records logs in the CTF format.