@@ -4,7 +4,7 @@
   ** ocamlc.byte
   compile_only = "true"
   module = "cmis_on_file_system.ml"
-  flags="-bin-annot"
+  flags="-bin-annot -no-alias-deps -w '-49'"
   *** script
   script= "mv cmis_on_file_system.cmt lone.cmt"
   **** ocamlc.byte
@@ -12,7 +12,7 @@
   compile_only="true"
   ***** ocamlc.byte
   compile_only = "true"
-  flags="-bin-annot"
+  flags="-bin-annot -no-alias-deps -w '-49'"
   module="cmis_on_file_system.ml"
   ****** compare-binary-files
   program="cmis_on_file_system.cmt"
@@ -24,3 +24,5 @@
     at a given point in time *)
 type t = int
 let () = ()
+
+module M = Cmis_on_file_system_companion
